fix: feedback page alignment

--- a/src/styles/gfeedback.css
+++ b/src/styles/gfeedback.css
@@ -3,4 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
+}
+
+.geco-feedback p {
+  margin: 0 0 20px 0;
 }
